--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ theme:
   flickr:
   github: "abea" # github profile name, e.g. "madebymunsters"
   google_plus:
-  instagram: 
+  instagram:
   linkedin:  "https://www.linkedin.com/in/alexbea" # Full URL
   pinterest:
   reddit:
@@ -68,7 +68,7 @@ collections:
 # BUILD SETTINGS
 markdown: kramdown
 
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: :compressed
