--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ theme:
   # Scripts
   google_analytics: "UA-32705264-1"
   disqus_shortname: "alexbea"
-  katex: true # Enable if using math markup
+  katex: false # Enable if using math markup
 
   # Localization strings
   str_follow_on: "Follow on"
