header updates, renamed files, new mixin file.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://alexbea.com" # the base hostname & protocol for your site
 # THEME-SPECIFIC CONFIGURATION
 theme:
   # Meta
-  title: Alex Bea # Your name will go here
+  title: Alexander Bea # Your name will go here
   description: "Front end web developer in Ithaca, NY" # used by search engines
 
   # Header and footer text
