more header work.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ theme:
 
   # Header and footer text
   header_text: >
-     <h2><span class="text--small">Front end web developer in Ithaca, NY</span></h2>
+     <h2 class="header__tagline">Front end web developer in Ithaca, NY</h2>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> and made with code. And love.
