presumably fixed highlighting. updated markdown code blocks.

--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,10 @@ collections:
 # BUILD SETTINGS
 markdown: kramdown
 
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
 sass:
   sass_dir: _sass
   style: :compressed
@@ -75,3 +79,5 @@ sass:
 gems:
   - jekyll-redirect-from
   - jekyll-paginate
+  - kramdown
+  - rouge
