--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ config:
 
   # Colours, typography and padding
   # Open the "_sass > base" folder, and open "_variables.scss"
-  google_fonts: "Source+Sans+Pro:400,700,400italic,700italic|Cabin+Sketch:700"
+  google_fonts: "Baloo"
 
 # PAGINATION
 paginate: 100
