--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ url: "http://alexbea.com" # the base hostname & protocol for your site
 config:
   # Meta
   title: Alexander Bea # Your name will go here
-  description: "Front end web developer in Ithaca, NY" # used by search engines
+  description: "Front end web developer" # used by search engines
   default_img: "img/ab-logo-min.png"
 
   # Header and footer text
   header_text: >
-     <h2 class="h3">Front end web developer in Ithaca, NY</h2>
+     <h2 class="h3">Front end web developer</h2>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> and made with code. And love.
