--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://alexbea.com" # the base hostname & protocol for your site
 # THEME-SPECIFIC CONFIGURATION
 config:
   # Meta
-  title: Alexander Bea # Your name will go here
+  title: Alex Bea # Your name will go here
   description: "Front end web developer" # used by search engines
   default_img: "img/ab-logo-min.png"
 
