--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@ config:
   header_text: >
      <h2 class="h3">Front end web developer</h2>
   header_text_feature_image:
-  footer_text: >
-   Powered by <a href="http://jekyllrb.com">Jekyll</a> and made with code. And love.
+  footer_text:
 
   # Icons
   rss: true
