--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://alexbea.com" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
-config:
+meta:
   # Meta
   title: Alex Bea # Your name will go here
   description: "Front end web developer" # used by search engines
