--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ meta:
   default_img: "img/ab-logo-min.png"
 
   # Header and footer text
-  header_text: Front end web developer
+  header_text:
   footer_text:
 
   # Icons
