Extends home teaser and adds jacked up link in footer

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ meta:
 
   # Header and footer text
   header_text:
-  footer_text:
+  footer_text: >
+    <a href="/2018/09/24/jacked-up">Why does this site look broken?</a>
 
   # Icons
   rss: true
