--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ meta:
 # PAGINATION
 paginate: 5
 paginate_path: "/blog/page:num/"
+permalink: /blog/:title/
 
 # COLLECTIONS
 collections:
@@ -68,3 +69,4 @@ plugins:
   - jekyll-sitemap
   - kramdown
   - rouge
+  - jekyll-redirect-from # Enable redirects
