Social icons added

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ meta:
   github: "abea" # github profile name
   instagram:
   linkedin:  "https://www.linkedin.com/in/alexbea" # Full URL
-  stack_exchange: "http://stackoverflow.com/users/888550/alexbea" # Full URL
+  stack_overflow: "http://stackoverflow.com/users/888550/alexbea" # Full URL
   twitter: "alexbea"
 
   # Scripts
