--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ meta:
 
   # Header and footer text
   header_text:
-  footer_text: >
-    <a href="/2018/09/24/jacked-up">Why does this site look broken?</a>
+  footer_text:
 
   # Icons
   rss: true
